app/(auth)/styles/login-page.module.scss
.auth-page {
  display: flex;
  min-height: 100vh;
  flex-direction: column;
  background: var(--color-surface);

  &__showcase {
    display: none;
  }

  &__panel {
    display: flex;
    width: 100%;
    min-height: 100vh;
    align-items: center;
    justify-content: center;
    padding: 1.5rem 1.25rem;
  }

  &__content {
    width: 100%;
    max-width: 27.9375rem;
  }

  &__mobile-brand {
    display: flex;
    align-items: center;
    margin-bottom: 2.5rem;
  }

  &__intro {
    margin-bottom: 3.75rem;
  }

  &__title {
    margin-bottom: 0.625rem;
    color: var(--color-text-main);
    font-weight: 700;
  }

  &__subtitle {
    color: var(--color-text-muted);
  }

  @media (min-width: 1024px) {
    flex-direction: row;

    &__showcase {
      display: flex;
      width: 50%;
      flex-direction: column;
      // justify-content: center;
      border-right: 1px solid var(--color-divider);
      padding: 6.625rem 4.125rem 3.5rem;
    }

    &__brand {
      display: flex;
      align-items: center;
      margin-bottom: 8.625rem;
    }

    &__mobile-brand {
      display: none;
    }

    &__brand-logo {
      width: 10.875rem;
      height: auto;
    }

    &__illustration {
      img {
        width: 100%;
        max-width: 37.5rem;
        height: auto;
      }
    }

    &__panel {
      width: 50%;
      min-height: auto;
      align-items: center;
      padding: 13.75rem 6.25rem;
    }

    &__content {
      max-width: 27.9375rem;
    }
  }
}

